--- a/software.html
+++ b/software.html
@@ -39,6 +39,8 @@
 <li><a href="https://github.com/grrrwaaa/gct753">Clone from</a> <strong>Github</strong></li>
 <li><a href="https://github.com/grrrwaaa/gct753/fork_select">Fork from</a> <strong>Github</strong></li>
 </ul>
+<h2>Reference</h2>
+<p>Most of the available functions and modules (both from Lua and AV) are <a href="docs/reference.html">documented in the reference pages</a>.</p>
 <h2>Tutorial</h2>
 <p>See <a href="lua.html">Lua 5.1 quick tutorial</a> for a quick introduction to the Lua language itself. </p>
 <p>Run the <em>av</em> executable (<em>av.exe</em> on Windows), and open up the <em>start.lua</em> file in a text editor. Any time you edit this file, and save it, <em>av</em> will reload it and run it.</p>
