--- a/software.html
+++ b/software.html
@@ -43,7 +43,7 @@
 <p>Most of the available functions and modules (both from Lua and AV) are <a href="docs/reference.html">documented in the reference pages</a>.</p>
 <h2>Tutorial</h2>
 <p>See <a href="lua.html">Lua 5.1 quick tutorial</a> for a quick introduction to the Lua language itself. </p>
-<p>Run the <em>av</em> executable (<em>av.exe</em> on Windows), and open up the <em>start.lua</em> file in a text editor. Any time you edit this file, and save it, <em>av</em> will reload it and run it.</p>
+<p>Run the <em>av</em> executable (<em>av.exe</em> on Windows, <em>av_osx</em> on OSX, <em>av_linux</em> on Linux), and open up the <em>start.lua</em> file in a text editor. Any time you edit this file, and save it, <em>av</em> will reload it and run it.</p>
 <p>Most scripts start with a bunch of <code>require</code> statements, which pull in needed functionality from external library <em>modules</em>. For example:</p>
 <pre><code class="lang-lua"><span class="keyword">local</span> field2D = <span class="built_in">require</span> <span class="string">"field2D"</span></code></pre>
 <p>This code loads the <em>field2D</em> module (from /modules/field2D.lua), which gives us a bunch of utilities for working with 2D dense arrays. These could be useful for making cellular automata, for example. Modules usually return a table of functions. For example, the <em>field2D</em> module contains a function called <em>new</em>, which we can use to create a new field <em>object</em>:</p>
