--- a/software.html
+++ b/software.html
@@ -53,7 +53,7 @@
 </ul>
 <h2>Reference</h2>
 <p>Most of the available functions and modules (both from Lua and AV) are <a href="docs/reference.html">documented in the reference pages</a>.</p>
-<h2>Tutorial</h2>
+<h2>Tutorial: Drawing with fields</h2>
 <p>See <a href="lua.html">Lua 5.1 quick tutorial</a> for a quick introduction to the Lua language itself. </p>
 <p>Most scripts start with a bunch of <code>require</code> statements, which pull in needed functionality from external library <em>modules</em>. For example:</p>
 <pre><code class="lang-lua"><span class="keyword">local</span> field2D = <span class="built_in">require</span> <span class="string">"field2D"</span></code></pre>
