--- a/rewriting.html
+++ b/rewriting.html
@@ -1,43 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset='utf-8'>
-<title>Rewriting systems</title>
-    
-<link href="css/site.css" media="screen" rel="stylesheet" type="text/css" />
-<link href="css/highlight.default.css" media="screen" rel="stylesheet" type="text/css" />
-  
-<script src="js/jquery.js"></script>
-<script src="js/socket.io.js"></script>
-<script src="js/main.js" type="text/javascript"></script>
-
-<link rel="icon" type="image/x-icon" href="favicon.ico" />
-</head>
-<body>
-<div id="wrapper">
-	
-	<div class="header">
-		<h1>GCT 753</h1>
-		<a href="index.html">Overview</a><br/>
-		<a href="software.html">Software</a><br/>
-		<a href="lua.html">Lua</a><br/>
-		<br>
-		<a href="introduction.html">Themes</a><br/>
-		<a href="artificial_life.html">Artificial Life</a><br/>
-		<!--
-		<a href="generative_art.html">Generative Art & Design</a><br/>
-		-->
-		
-	</div>
-	<div class="section"><h1>Rewriting systems, L-systems</h1>
+<h1>Rewriting systems, L-systems</h1>
 <h2>Fractal structures do not need to use symbolic rewriting</h2>
 <p><a href="https://www.youtube.com/watch?v=FEnI_JPL6I0">Here</a> is an example of a fractal tree structure created through simple video feedback.</p>
-</div>
-	
-	<div class="footer">
-	<img src="img/snake6_small.jpg" alt="Artificial Natures"><br/>
-	Graham Wakefield, 2013</div>
-	
-</div>
-</body>
-</html>
