--- a/artificial_life.html
+++ b/artificial_life.html
@@ -20,14 +20,13 @@
 		<h1>GCT 753</h1>
 		<a href="index.html">Overview</a><br/>
 		<a href="software.html">Software</a><br/>
-		<a href="lua.html">Lua</a><br/>
+		<a href="lua.html">Lua Tutorial</a><br/>
 		<br>
 		<a href="introduction.html">Themes</a><br/>
 		<a href="artificial_life.html">Artificial Life</a><br/>
-		<!--
-		<a href="generative_art.html">Generative Art & Design</a><br/>
-		<a href="cellular.html">Cellular systems</a><br/>
-		-->
+		<a href="generative_art.html">Generative Art</a><br/>
+		<br>
+		<a href="cellular.html">Cellular Systems</a><br/>
 		
 	</div>
 	<div class="section"><h1>Artificial Life</h1>
