--- a/introduction.html
+++ b/introduction.html
@@ -47,6 +47,9 @@
 <p>&quot;Generative Design is a morphogenetic process using algorithms structured as not-linear systems for endless unique and un-repeatable results performed by an idea-code, as in Nature&quot;. Celestino Soddu, 1992.</p>
 </blockquote>
 </blockquote>
+<h2>Some inspiration</h2>
+<p><a href="http://www.youtube.com/watch?v=WFCvkkDSfIU">Here&#39;s something amazing about how our cells replicate</a>, and more animations by <a href="http://www.youtube.com/watch?v=yKW4F0Nu-UY&amp;list=PL3DB3C131CBCD2A0F&amp;index=5">Drew Berry</a></p>
+<p><a href="http://www.youtube.com/watch?v=Wl5rRGVD0QI">Tom Ray: the evolutionary biologist who created evolution in the CPU</a></p>
 <h2>Readings</h2>
 <p><a href="http://www.csse.monash.edu.au/~jonmc/research/Papers/TenQuestionsLJ-Preprint.pdf">Ten Questions Concerning Generative Computer Art. Jon McCormack, Oliver Bown,. Alan Dorin, Jonathan McCabe,. Gordon Monro and Mitchell Whitelaw. 2012</a></p>
 <p><a href="http://simonpenny.net/texts/Resources/a_life.pdf">Artificial Life -- a Primer. Simon Penny, 2009</a></p>
