--- a/generative_art.html
+++ b/generative_art.html
@@ -37,6 +37,7 @@
 <p><a href="http://www.tandfonline.com/doi/pdf/10.1080/14626268.2012.709940">Various. A Framework for understanding Generative Art</a></p>
 <p><a href="http://diotima.infotech.monash.edu.au/~jonmc/sa/news/ten-questions-concerning-generative-computer-art/">Various. Ten Questions Concerning Generative Art</a></p>
 <p><a href="http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.136.5399">Whitelaw, M. System Stories and Model Worlds: A Critical Approach to Generative Art.</a></p>
+<p><a href="http://research.it.uts.edu.au/creative/eae/intart/pdfs/generative-art.pdf">Boden, M., Edmonds, E. What is Generative Art?</a></p>
 <h2>Artificial Life Art</h2>
 <p>Recall that art &amp; design are well-represented within Artificial Life research. Langton accorded importance to the creative and aesthetic aspects of ALife. Several works (notably Karl Sims&#39;) have been accoladed in both scientific and art communities. Furthermore, many scholars have noted the aesthetic nature of evaluation of ALife simulations, for their &#39;lifelikeness&#39; or &#39;interestingness&#39;. </p>
 <p><a href="http://www.csse.monash.edu.au/~jonmc/research/Papers/OpenProblemsSV.pdf">McCormack, J. Open Problems in Evolutionary Music &amp; Art</a></p>
@@ -45,6 +46,7 @@
 <p><a href="http://www.tandfonline.com/doi/pdf/10.1080/14626261003654640">Penny, S. 20 Years of Artificial Life Art</a></p>
 <p><a href="http://link.springer.com/article/10.1007%2FBF02471174?LI=true#page-1">Sommerer, C. and Mignonneau, L. The application of artificial life to interactive computer installations</a></p>
 <p><a href="http://books.google.co.kr/books?hl=en&amp;lr=&amp;id=0J8kQEjXe38C&amp;oi=fnd&amp;pg=PA167&amp;dq=Sommerer+and+Mignonneau&amp;ots=nlWrCyeDV5&amp;sig=OgzhQf55zUmrtyGYjoSAcFCSqpw&amp;redir_esc=y#v=onepage&amp;q=Sommerer%20and%20Mignonneau&amp;f=false">Sommerer, C. and Mignonneau, L. A-Volve an evolutionary artificial life environment.</a></p>
+<p><a href="http://link.springer.com/chapter/10.1007%2F978-3-540-74111-4_7?LI=true#page-1">Driessens, E. and Verstappen, M. Natural Processes and Artificial Procedures.</a></p>
 <p><a href="http://download.springer.com/static/pdf/719/chp%253A10.1007%252F978-1-84882-285-6_14.pdf?auth66=1363162689_1efc6d54d6ee7c6e983d4150f2086f67&amp;ext=.pdf">Dorin, A. Enriching Aesthetics with Artiﬁcial
 Life</a></p>
 <p><a href="http://link.springer.com/chapter/10.1007%2F978-3-540-72877-1_14?LI=true#page-1">Dorin, A. A Survey of Virtual Ecosystems in Generative Electronic Art</a></p>
