--- a/cellular.html
+++ b/cellular.html
@@ -31,6 +31,7 @@
 	</div>
 	<div class="section"><h1>Cellular systems and lattice models</h1>
 <p>Provides an interesting continuum between non-living (such as molecules in crystal and metalline structures) and living (such as cells of a multi-cellular organism). The main difference is that, although both begin with more or less &#39;the same program&#39;, in living material the individual behavior of each cell specializes according to early conditions. This is important for <em>developmental biology</em>. Of course, computational cellular systems are far, far simpler than biological cells; but still draw from this inpsiration. The CA model was propsed by Stanislaw Ulam and used by von Neumann to demonstrate machines that can reproduce themselves; a more concise example being proposed by <a href="http://www.youtube.com/watch?v=2iDc4C6vbcc">Christopher Langton</a> decades later, itself later <a href="http://www.youtube.com/watch?v=vbpoTZlNTiw&amp;NR=1&amp;feature=endscreen">improved upon using artificial evolutionary techniques</a>.</p>
+<p><a href="http://www.interciencia.es/PDF/WikipediaBooks/CellAutomata.pdf">The wikibooks on CA</a>.</p>
 <p>The essential components that define a cellular system:</p>
 <ul>
 <li><strong>Cellular space:</strong> A collection of cells arranged into a discrete lattice, such as a 2D grid. </li>
@@ -99,19 +100,6 @@
 <p>The rule is not the same for all cells / for all time steps. Spatial non-homogeneity can be interesting to simulate different geographies (such as boundaries). Temporal non-homogeneity can be used to perform a sequence of different filters. </p>
 <p>Or perhaps the neighborhood selection may change between updates (also see particle CA below).</p>
 <p>These can be implemented by changing the function used in the transition rule, or by extending the state set to accommodate the differences. Changing the function is usually easier to implement and understand.</p>
-<h3>Asynchronous CA</h3>
-<p>Instead of updating all cells at once, update one cell at a time, according to some update policy. </p>
-<ul>
-<li>A fixed update policy, such as linear scan or pre-determined path, is orderly, but may introduce artifacts (related to the <em>double-buffering</em> pattern). </li>
-<li>A <em>probabilistic asynchronous CA</em> chooses the next active cell according to a random selection (related to the Monte Carlo methods described below).</li>
-<li>A <em>mobile CA</em> chooses a related cell (such as one of the neighbors) of the current active cell as the next active cell. So in addition to choosing a new state for the cell, the transition rule must also choose how to move the active cell. This could also be partly probabilistic.</li>
-</ul>
-<p><a href="http://en.wikipedia.org/wiki/Langton%27s_ant">Langton&#39;s Ant</a> is a mobile CA in a 2D, two-state space, with very simple rules:</p>
-<ul>
-<li>At a white square, turn 90° right, flip the color of the square, move forward one unit</li>
-<li>At a black square, turn 90° left, flip the color of the square, move forward one unit</li>
-</ul>
-<p><a href="https://github.com/grrrwaaa/gct753/blob/master/ca_2D_langtons_ant.lua">See the script</a> in the repo, and the <a href="http://www.youtube.com/watch?v=w6XQQhCgq5c">original video by Christopher Langton</a>, including examples of multiple ants (and music by the Vasulkas). Note that Langton&#39;s Ant, and other related Turmites, are closely related to the turtle graphics often used for L-systems.</p>
 <h3>Probabilistic/Stochastic CA</h3>
 <p>In this case the transition rule is not deterministic, but includes some random factor. For example, a probability can be assigned to each successor state according to the prior states. </p>
 <p>Take a look at the <a href="https://github.com/grrrwaaa/gct753/blob/master/ca_2D_forest_fire.lua">Forest Fire CA example</a>, and try changing the probabilities to see how it behaves.</p>
@@ -124,6 +112,20 @@
 <p>More example block CAs <a href="http://psoup.math.wisc.edu/mcell/rullex_marg.html">here</a> -- many of these are implemented <a href="https://github.com/grrrwaaa/gct753/blob/master/ca_2D_block_rules.lua">in the example script here</a>. </p>
 <p>In 1969, German computer pioneer (and painter) Konrad Zuse published his book <a href="ftp://ftp.idsia.ch/pub/juergen/zuserechnenderraum.pdf">Calculating Space</a>, proposing that the physical laws of the universe are discrete by nature, and that the entire universe is the output of a deterministic computation on a single cellular automaton. This became the foundation of the field of study called <em>digital physics</em>. Zuse&#39;s first model is a 3D particle CA.</p>
 <p><img src="img/zuse.jpg" alt="Zuse&#39;s vision of nature"></p>
+<h3>Asynchronous CA</h3>
+<p>Instead of updating all cells at once, update one cell at a time, according to some update policy. The same choices can be applied per-block in a block-rule CA.</p>
+<ul>
+<li>A fixed update policy, such as linear scan or pre-determined path, is orderly, but may introduce artifacts (related to the <em>double-buffering</em> pattern). </li>
+<li>A <em>probabilistic asynchronous CA</em> chooses the next active cell according to a random selection (related to the Monte Carlo methods described below).</li>
+<li>A multi-rate CA (self-clocked) updates each cell according to a clock period that varies from cell to cell. The clock period could also be affected by neighbors, to achieve <em>entrainment</em> effects.</li>
+<li>A <em>mobile CA</em> chooses a related cell (such as one of the neighbors) of the current active cell as the next active cell. So in addition to choosing a new state for the cell, the transition rule must also choose how to move the active cell. This could also be partly probabilistic.</li>
+</ul>
+<p><a href="http://en.wikipedia.org/wiki/Langton%27s_ant">Langton&#39;s Ant</a> is a mobile CA in a 2D, two-state space, with very simple rules:</p>
+<ul>
+<li>At a white square, turn 90° right, flip the color of the square, move forward one unit</li>
+<li>At a black square, turn 90° left, flip the color of the square, move forward one unit</li>
+</ul>
+<p><a href="https://github.com/grrrwaaa/gct753/blob/master/ca_2D_langtons_ant.lua">See the script</a> in the repo, and the <a href="http://www.youtube.com/watch?v=w6XQQhCgq5c">original video by Christopher Langton</a>, including examples of multiple ants (and music by the Vasulkas). Note that Langton&#39;s Ant, and other related Turmites, are closely related to the turtle graphics often used for L-systems.</p>
 <h3>Continuous automata</h3>
 <p><strong>Continuous states:</strong> In this case, the states are not discrete but belong to a continuum, such as the linear range 0..1. Instead of using a discrete transition rule or lookup table, continuous functions can be used (or combined with discrete rules such as comparisons). Continuous automata can show liquid and diffusive effects.</p>
 <p><strong>Continuous neighborhood:</strong> Instead of accumulating whole neighbor cells, apply a <em>kernel</em> region, weighting cells according to the degree that they fall under a radius, or by distance.</p>
