--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 		<h1>GCT 753</h1>
 		<a href="index.html">Overview</a><br/>
 		<a href="software.html">Software</a><br/>
+		<a href="https://github.com/grrrwaaa/gct753">On GitHub</a><br/>
+		<a href="http://grrrwaaa.github.com/gct753/docs/reference.html">Reference</a><br/>
 		<a href="lua.html">Lua Tutorial</a><br/>
 		<br>
 		<a href="introduction.html">Themes</a><br/>
