--- a/software.html
+++ b/software.html
@@ -20,14 +20,13 @@
 		<h1>GCT 753</h1>
 		<a href="index.html">Overview</a><br/>
 		<a href="software.html">Software</a><br/>
-		<a href="https://github.com/grrrwaaa/gct753">On GitHub</a><br/>
-		<a href="http://grrrwaaa.github.com/gct753/docs/reference.html">Reference</a><br/>
 		<a href="lua.html">Lua Tutorial</a><br/>
+		<a href="https://github.com/grrrwaaa/gct753">GitHub</a><br/>
+		<a href="http://grrrwaaa.github.com/gct753/docs/reference.html">Reference</a><br/>
 		<br>
 		<a href="introduction.html">Themes</a><br/>
 		<a href="artificial_life.html">Artificial Life</a><br/>
 		<a href="generative_art.html">Generative Art</a><br/>
-		<br>
 		<a href="cellular.html">Cellular Systems</a><br/>
 		
 	</div>
